added veterinarians page on WP / create areas-expertise page

--- a/src/veterinar-page.html
+++ b/src/veterinar-page.html
@@ -20,7 +20,7 @@
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
 </head>
-<body class="veterinar-page">
+<body class="single-veterinarians">
 
     <!-- header -->
 	<div class="navbar-wrapper">
@@ -274,9 +274,9 @@
 			<div class="text-item">
 				<p class="section-subtitle color-green">Innere Medizin</p>
 				<h2 class="section-title">
-                    Erfahren Sie mehr über
-                    den Fachbereich von
-                    Stefan Schellenberg
+					Erfahren Sie mehr über
+					den Fachbereich von
+					Stefan Schellenberg
 				</h2>
 				<a href="#" class="btn shadow-lg">
 					Mehr erfahren
@@ -285,11 +285,11 @@
 		</div>
 	</section>
 
-    <a href="#" class="btn full-btn bg-green">
-        <span class="arrow arrow-left mr-2"></span>
-        Alle Tierärzte
-    </a>
+	<a href="#" class="btn full-btn bg-green">
+		<span class="arrow arrow-left mr-2"></span>
+		Alle Tierärzte
+	</a>
 
-    <div class="overlay overlayJs"></div>
+	<div class="overlay overlayJs"></div>
 </body>
 </html>
